unpackaged/main/default/objects/Product_Conversation_Definition__mdt/Product_Conversation_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Product Conversation Definition</label>
    <pluralLabel>Product Conversation Definitions</pluralLabel>
</CustomObject>