unpackaged/main/default/objects/Product_Conversation_Definition__mdt/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>