unpackaged/main/default/objects/Product_Conversation_Definition__mdt/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question 1</label>
    <type>TextArea</type>
</CustomField>