unpackaged/main/default/objects/Product_Conversation_Definition__mdt/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question 2</label>
    <type>TextArea</type>
</CustomField>